# my_lovely_cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
